refactor: fitness name 정보 Elasticsearch에 추가