@@ -2,9 +2,9 @@ package com.sparta.modulecommon.center.entity;
 
 import com.sparta.modulecommon.fitness.entity.Fitness;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import org.hibernate.Hibernate;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.elasticsearch.annotations.Document;
 import org.springframework.data.elasticsearch.annotations.Field;
@@ -59,8 +59,9 @@ public class CenterSearch {
         this.latitude = center.getLatitude();
         this.longitude = center.getLongitude();
         this.location = new GeoPoint(center.getLatitude(), center.getLongitude());
+        Hibernate.initialize(center.getFitnesses());
         this.fitnessName = center.getFitnesses().stream()
                 .map(Fitness::getFitnessName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
